<resources>
    <string name="app_name">BytBok</string>
    <string name="new_user">Ny Användare?</string>
    <string name="already_user">Redan registrerat dig?</string>
    <string name="header_login">Login</string>
    <string name="header_register">Registrera</string>
    <string name="login_mode_text">Logga in</string>
    <string name="register_mode_text">Skapa konto</string>
    <string name="register_button">Registrera</string>
    <string name="login_button">Login</string>
    <string name="books_to_read">Mina favoriter</string>
    <string name="header_myPage">Min Sida</string>
    <string name="user_edit_title">Redigera användare</string>
    <string name="hint_username">Ange nytt användarnamn</string>
    <string name="hint_phone">Telefonnummer</string>
    <string name="hint_advert_location">Plats</string>
    <string name="save_button_text">Spara</string>
    <string name="delete_account_button_text">Radera konto</string>
    <string name="logout_button_text">Logga ut</string>
    <string name="Saving">Sparar…</string>
    <string name="logout_title">Logga ut</string>
    <string name="logout_message">Är du säker på att du vill logga ut?</string>
    <string name="delete_account_title">Radera konto</string>
    <string name="delete_account_message">Är du säker på att du vill radera ditt konto? Denna åtgärd kan inte ångras.</string>
    <string name="confirm">Bekräfta</string>
    <string name="cancel">Avbryt</string>>
    <string name="hint_email">E-post</string>
    <string name="hint_password">Lösenord</string>

    <string name="user_details_username">Användarnamn: %1$s</string>
    <string name="user_details_useremail">E-post: %1$s</string>
    <string name="user_details_contact">Telefonnummer: %1$s</string>
    <string name="user_details_city">Stad: %1$s</string>

    <string name="credentials_dialog_title">Ange dina uppgifter igen</string>
    <string name="submit_button_label">Skicka</string>
    <string name="cancel_button_label">Avbryt</string>
    <string name="credentials_toast_message">Ange både e-post och lösenord.</string>
    <string name="edit_user">Redigera</string>
    <string name="my_adds">Mina Annonser</string>
    <string name="user_profile_bottomNav">Min profil</string>
    <string name="favorites_bottomNav">Favoriter</string>
    <string name="adverts_bottomNav">Alla annonser</string>
    <string name="my_adverts_">Mina Annonser</string>
    <string name="my_adverts_header_text">Mina annonser</string>
    <string name="sub_header">Hantera ditt konto och annonser</string>
    <string name="edit_info_toolbar">Redigera information</string>
    <string name="profile_toolbar">Min profil</string>
    <string name="favorites_toolbar">Böcker jag vill läsa</string>
    <string name="favorites_toolbar_subtitle">Dina favoriter</string>
    <string name="edit_button">Uppdatera</string>


    <string name="create_new_ad">Skapa ny annons</string>
    <string name="create_new_ad_text">Skapa ny annons</string>
    <string name="read_more_button_text">Läs mer</string>
    <string name="ads_details_text">Annons Detaljer</string>
    <string name="create_ads_text">Skapa annons</string>
    <string name="hint_search">Böcker, stad, författare...</string>

    <string name="hint_title">Titel</string>
    <string name="hint_author">Författare</string>
    <string name="hint_genre">Genre</string>
    <string name="label_where">Finns i:</string>
    <string name="label_contact_info">Kontakta mig för att få boken:</string>
    <string name="publish_button_text">Publicera</string>

    <string name="author_advert_tv">Författare: %1$s</string>
    <string name="location_advert_tv">Finns i: %1$s</string>
    <string name="contact_advert_tv">Kontaktsätt: %1$s</string>
    <string name="contact_ad_creator_button_text">Kontakta annonsören</string>
    <string name="genre_advert_tv">Genre: %1$s</string>
    <string name="posted_on_date">Skapat: %1$s</string>
    <string name="creation_time_label">Inlagd %1$s</string>
    <string name="ad_creator_label">Skapad av %1$s</string>

    <string name="today">Idag</string>
    <string name="yesterday">Igår</string>
    <string name="sunday">i söndags</string>
    <string name="monday">i måndags</string>
    <string name="tuesday">i tisdags</string>
    <string name="wednesday">i onsdags</string>
    <string name="thursday">i torsdags</string>
    <string name="friday">i fredags</string>
    <string name="saturday">i lördags</string>
    <string name="header_adverts_frag">Byt Din Bok</string>
    <string name="avalible_books">Alla tillgängliga böcker</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="name">Namn</string>
    <string name="way_of_contact">Välj hur du vill bli kontaktad</string>
    <string name="e_post">E-Post</string>
    <string name="mobile_number">Mobilnummer</string>
    <string name="invalid_phone_number">Ogiltigt telefonnummer</string>
    <string name="invalid_email">Ogiltigt e-post address</string>
    <string name="hint_phone_number">Telefonnummer</string>
    <string name="profil_saved_">Telefonnummer</string>

    <string name="email_subject">Angående annonsen: %1$s</string>
    <string name="email_body">Hej,\n\nJag är intresserad av din annons: %1$s.\n\nMvh,\n%2$s.</string>
    <string name="choose_email_app">Välj en e-postapp</string>
    <string name="advert_saved_successfully">Annonsen har sparats!</string>
    <string name="advert_save_failed">Misslyckades med att spara annonsen. Försök igen.</string>
    <string name="publishing">Publicerar…</string>
    <string name="updating">Uppdaterar…</string>
    <string name="invalid_contact_info">Kontaktinformationen är ogiltig.</string>
    <string name="preferred_contact_text">Välj önskad kontaktsätt</string>
    <string name="delete_advert_title">Radera annons</string>
    <string name="delete_advert_message">Är du säkert på att du vill radera annonsen?</string>
    <string name="advert_updated_succesfully">Annonsen är uppdaterad!</string>
    <string name="edit_advert_title">Redigera din annons</string>
    <string name="logout_success">Du är nu utloggad!</string>
    <string name="account_deleted">Ditt konto är nu raderat!</string>
    <string name="deleting_in_progress_message">Raderar ditt konto och alla dina annonser...</string>

    <string name="advert_missing_fields">Fyll i alla fält!</string>
    <string name="generic_error">Något gick fel!</string>
    <string name="advert_updated_successfully">Annonsen är uppdaterats!</string>
    <string name="advert_id_missing_error">Fel: Annons ID saknas!</string>

    <string name="added_to_favorites">Lagt till i favoriter</string>
    <string name="removed_from_favorites">Borttagen från favoriter</string>

    <string name="forgot_password_text">Glömt ditt lösenord?</string>
    <string name="success_title">Klart!</string>
    <string name="password_reset_success_message">Vi har nu skickat en lösenord nollställnings mail till din mail adress. Kollla din mail nu!</string>
    <string name="retry_button">Testa igen</string>
    <string name="error_title">Fel!</string>
    <string name="password_reset_dialog_title">Återställ lösenord</string>
    <string name="ok_dialog_button">OK</string>
    <string name="password_reset_dialog_description">Ange din e-postadress, så skickar vi ett meddelande med instruktioner för att återställa ditt lösenord.</string>
    <string name="user_profile_save_success_message">Informationen sparad</string>

    <string name="error_user_not_found">Inget konto hittades med denna e-postadress.</string>
    <string name="error_invalid_email">E-postadressen är felaktigt formaterad.</string>
    <string name="error_too_many_requests">För många förfrågningar. Försök igen senare.</string>
    <string name="error_unknown">Ett okänt fel inträffade. Försök igen senare.</string>
    <string name="error_wrong_password">Fel lösenord.</string>
    <string name="error_email_already_in_use">E-postadressen används redan.</string>
    <string name="error_weak_password">Lösenordet är för svagt.</string>
    <string name="error_invalid_custom_token">Ogiltigt format för anpassat token. Kontrollera dokumentationen.</string>
    <string name="error_custom_token_mismatch">Anpassat token motsvarar en annan publik.</string>
    <string name="error_invalid_credential">Autentiseringsuppgiften är felaktig eller har gått ut.</string>
    <string name="error_user_mismatch">De tillhandahållna uppgifterna motsvarar inte den tidigare inloggade användaren.</string>
    <string name="error_requires_recent_login">Denna operation är känslig och kräver nylig autentisering. Logga in igen innan du försöker med begäran igen.</string>
    <string name="error_account_exists_with_different_credential">Ett konto finns redan med samma e-postadress men olika inloggningsuppgifter. Logga in med en leverantör kopplad till denna e-postadress.</string>
    <string name="error_credential_already_in_use">Denna uppgift är redan kopplad till ett annat användarkonto.</string>
    <string name="error_user_disabled">Användarkontot har inaktiverats av en administratör.</string>
    <string name="error_user_token_expired">Användarens uppgift är inte längre giltig. Användaren måste logga in igen.</string>
    <string name="error_invalid_user_token">Användarens uppgift är inte längre giltig. Användaren måste logga in igen.</string>
    <string name="error_operation_not_allowed">Denna operation är inte tillåten. Du måste aktivera denna tjänst i konsolen.</string>
    <string name="error_missing_email">En e-postadress måste anges.</string>
    <string name="advert_deleted_succesfully">Din annons är nu raderad!</string>
    <string name="error_no_internet_connection">Ingen internet connection\n</string>
    <string name="press_back_again">Tryck igen för att avsluta</string>

</resources>