<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="se.rebeccazadig.bokholken.login.UserViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_background_color"
        tools:context=".login.EditUserProfileFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/editUserToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/medium_beige"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/edit_info_toolbar"
            app:titleTextColor="@color/bottom_nav_item_color" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editNameInputLayout"
            style="@style/CustomOutlinedTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUserToolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNameET"
                style="@style/CustomTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="textCapSentences"
                android:text="@={vm.userName}"
                android:textColor="@color/dark_brown" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editContactInputLayout"
            style="@style/CustomOutlinedTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editNameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_edit_text_input"
                style="@style/CustomTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:text="@={vm.userPhoneNumber}"
                android:textColor="@color/dark_brown" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/preferred_contact_method_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/preferred_contact_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editContactInputLayout" />

        <RadioGroup
            android:id="@+id/contactMethodRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/preferred_contact_method_title">

            <RadioButton
                android:id="@+id/radioBtnPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/mobile_number" />

            <RadioButton
                android:id="@+id/radioBtnEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_post" />
        </RadioGroup>

        <Button
            android:id="@+id/editUserButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/red_brown"
            android:enabled="@{!vm.isButtonDisabled}"
            android:onClick="@{(view) -> vm.saveUserProfile(view)}"
            android:text="@string/save_button_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactMethodRadioGroup" />

        <!-- ProgressBar Layout -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progressbar_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:visibility="@{vm.inProgress ? View.VISIBLE : View.GONE}"
            tools:visibility="gone">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.25"
                android:background="@color/black"
                android:clickable="true"
                android:focusable="true" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loadingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Saving"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
